# zephyr

.github/: copilot-instructions.md
boards/common/: esp32.board.cmake
boards/espressif/esp32s3_devkitm/support/: openocd.cfg
drivers/spi/: spi_stm32.c
drivers/usb/udc/: udc_dwc2_esp32_usb_otg.h
lib/cpp/minimal/: cpp_new.cpp
lib/cpp/minimal/include/: new
samples/ardupilot/: CMakeLists.txt  main.cpp  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
samples/ardupilot/AP_Common/: Makefile
samples/ardupilot/AP_Common/examples/AP_Common/: AP_Common.cpp
samples/ardupilot/AP_HAL/: AP_HAL_Main.h  Makefile  Semaphores.h
samples/ardupilot/AP_HAL/utility/: functor.h
samples/ardupilot/AP_HAL_ESP32/: Semaphores.cpp  Semaphores.h
tests/lib/cpp/cxx/src/: main.cpp
